--- a/11. Непараметрическое обучение в задачах распознавания. Метод k-ближайших соседей.md
+++ b/11. Непараметрическое обучение в задачах распознавания. Метод k-ближайших соседей.md
@@ -46,7 +46,7 @@ $$ V_n = \frac{\pi^{n/2}}{\Gamma(\frac{n}{2} + 1)} r^n $$
 
 Рекомендуемые зависимости:
 
-$$ k = a N^\gamma, \quad 0 < \gamma < 1 или k = b \ln(N + 1) $$  
+$$ k = a N^\gamma, \quad 0 < \gamma < 1\ или\ k = b \ln(N + 1) $$  
 
 где $a,b,\gamma$ — константы.
 
